--- a/src/templates/content.html
+++ b/src/templates/content.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-            background-color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="content.css">
+    <title>Content-Hosting</title>
 </head>
 <body>
-    <script src="particles.js"></script>
-    <script src="app.js"></script>
+    <div class="particles-js">
+        <nav>
+            <ul class="text-white text-2xl flex-col py-48 space-y-28 px-3">
+                <img src="../images/10.png" width="50" class="cursor-pointer">
+                <img src="../images/11.png" width="50" class="cursor-pointer">
+                <img src="../images/12.png" width="50" class="cursor-pointer">
+            </ul>
+    </nav>
+    </div>
+    <div class=""></div>
+    <script type="text/javascript" src="particles.min.js"></script>
+    <script type="text/javascript" src="particles.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
