--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="center">
-        <img id="logo" src="../images/Binarydot.png" height="300">
+        <img id="logo" src="../images/Desktop.jpg" height="300">
     </div>
     <br><br><br><br><br><br><br><br><br><br>
     <h1 align="center">Elevate Your Crypto Experience:</h1>
