--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="magic.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="../images/Binarydot.png">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     <title>Binary.dot</title>
 </head>
 <body>
