--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="content.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <title>Content-Hosting</title>
 </head>
@@ -17,11 +17,12 @@
                 <img src="../images/11.png" width="50" class="cursor-pointer">
                 <img src="../images/12.png" width="50" class="cursor-pointer">
             </ul>
+    <div class="uploadimg">
+
+    </div>
     </nav>
     </div>
     <div class=""></div>
-    <script type="text/javascript" src="particles.js"></script>
-    <script src="app.js"></script>
 </body>
 </html>
 
