--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,4 +9,4 @@
     <h1>Upload a Photo</h1>
     <form action="/upload" method="POST" enctype="multipart/form-data">
         <input type="file" name="photo" accept="image/*" required>
-        <button type="submit">Upload</button
+        <button type="submit">Upload</button>
