--- a/src/templates/host.html
+++ b/src/templates/host.html
@@ -7,12 +7,12 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="icon" type="image/png" href="../images/favicon.png">
+    <link rel="icon" type="image/png" href="/static/images/favicon.png">
     <script src="https://kit.fontawesome.com/cfe5b044fd.js" crossorigin="anonymous"></script>
     <title>Hosting Event</title>
     <style>
-        body {
-            background-image: url(../images/home.png);
+       body {
+            background-image: url(/static/images/home.png);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
@@ -159,8 +159,7 @@
         input {
             background: 0;
             border: 0;
-            outline: none;
-            width: 80vw;
+            outline: none;width: 80vw;
             max-width: 400px;
             font-size: 1.5em;
             transition: padding 0.3s 0.2s ease;
@@ -294,7 +293,7 @@
 
         .active-link {
             color: #fff;
-        }
+       }
     </style>
 </head>
 <body class="bg-cover bg-center bg-no-repeat h-screen">
@@ -319,36 +318,36 @@
             </ul>
         </nav>
         <main class="flex-1 flex flex-col justify-center items-center px-96">
-            <div class="field2 flex-col mx-2 my-1">
-                <input type="text" placeholder="Event Name" class="text-white"/>
-                <div class="line2"></div>
-            </div>
-            <div class="field flex-col mx-2 my-1">
-                <input type="text" placeholder="Event Description" class="text-white"/>
-                <div class="line"></div>
-            </div>
-            <div class="field3 flex-col mx-2 my-1">
-                <input type="text" placeholder="Prize Money" class="text-white"/>
-                <div class="line3"></div>
-            </div>
-            <br><br>
-            <div class="text-white text-2xl font-extrabold">
-                Send the prize money to this wallet address:
-            </div>
-            <div class="text-white text-2xl font-extrabold">
-                0x85243f8B7A5d4159211BCfB1dfc48ca77D23898B
-            </div>
-            <div class="container">
-                <label for="file">
-                    <span class="font-bold">
-                        Upload
-                    </span>
-                    <ion-icon name="cloud-upload-outline"></ion-icon>
-                </label><input id="file" type="file"/>
-            </div>
-            <div class="flex justify-center py-8 text-green-500 font-bold text-xl">
-                <button class="button1">Create Event</button>
-            </div>
+            <form action="{{ url_for('upload_event') }}" method="POST" enctype="multipart/form-data">
+                <div class="field flex-col mx-2 my-1">
+                    <input type="text" name="event_name" placeholder="Event Name" class="text-white"/>
+                    <div class="line"></div>
+                </div>
+                <div class="field2 flex-col mx-2 my-1">
+                    <input type="text" name="event_description" placeholder="Event Description" class="text-white"/>
+                    <div class="line2"></div>
+                </div>
+                <div class="field3 flex-col mx-2 my-1">
+                    <input type="text" name="prize_money" placeholder="Prize Money" class="text-white"/>
+                    <div class="line3"></div>
+                </div>
+                <br><br>
+                <div class="text-white text-2xl font-extrabold">Send the prize money to this wallet address:
+                </div>
+                <div class="text-white text-2xl font-extrabold">
+                    0x85243f8B7A5d4159211BCfB1dfc48ca77D23898B</div>
+                <div class="container">
+                    <label for="file">
+                        <span class="font-bold">
+                            Upload
+                        </span>
+                        <ion-icon name="cloud-upload-outline"></ion-icon>
+                    </label><input id="file" type="file" name="image"/>
+                </div>
+                <div class="flex justify-center py-8 text-green-500 font-bold text-xl">
+                    <button class="button1">Create Event</button>
+                </div>
+            </form>
         </main>
     </div>
 </body>
