--- a/src/templates/test1.html
+++ b/src/templates/test1.html
@@ -294,304 +294,26 @@
         .active-link {
             color: #fff;
        }
-    </style>
-</head>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="icon" type="image/png" href="/static/images/favicon.png">
-    <script src="https://kit.fontawesome.com/cfe5b044fd.js" crossorigin="anonymous"></script>
-    <title>Hosting Event</title>
-    <style>
-       body {
-            background-image: url(/static/images/home.png);
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            height: 100vh;
-        }
+       .authentication-text {
+      color: white;
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
 
-        nav {
-            width: 100px;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+    .authenticate-button {
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.6s;
+    }
 
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        nav ul li {
-            margin-bottom: 20px;
-        }
-
-        nav ul li i {
-            font-size: 30px;
-            color: white;
-            transition: color 0.3s;
-        }
-
-        nav ul li i:hover,
-        nav ul li i.active {
-            color: #03FA6E;
-        }
-
-        main {
-            flex: 1;
-            padding: 50px 700px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        input {
-            background: 0;
-            border: 0;
-            outline: none;
-            width: 80vw;
-            max-width: 400px;
-            font-size: 1.5em;
-            transition: padding 0.3s 0.2s ease;
-        }
-
-        input:focus {
-            padding-bottom: 5px;
-        }
-
-        input:focus+.line:after {
-            transform: scaleX(1);
-        }
-
-        .field {
-            position: relative;
-            margin-bottom: 20px;
-        }
-
-        .field input[type=text] {
-            background: 0;
-            border: 0;
-            outline: none;
-            width: 80vw;
-            max-width: 400px;
-            font-size: 1.5em;
-            transition: padding 0.3s 0.2s ease;
-        }
-
-        .field input[type=text]:focus {
-            padding-bottom: 5px;
-        }
-
-        .field .line {
-            width: 100%;
-            height: 3px;
-            position: absolute;
-            bottom: -8px;
-            background: #bdc3c7;
-        }
-
-        .field .line:after {
-            content: " ";
-            position: absolute;
-            float: right;
-            width: 100%;
-            height: 3px;
-            transform: scaleX(0);
-            transition: transform 0.3s ease;
-            background: #03FA6E;
-        }
-
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 50px;
-            position: relative;
-        }
-
-        label[for=file] {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #03FA6E;
-            border: 2px solid #03FA6E;
-            border-radius: 2em;
-            width: 130px;
-            height: 30px;
-            cursor: pointer;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        label[for=file] span {
-            margin-right: 20px;
-        }
-
-        label[for=file] ion-icon {
-            font-size: 20px;
-        }
-
-        label[for=file]:hover,
-        label[for=file]:focus,
-        label[for=file]:active {
-            background: #03FA6E;
-            color: #000;
-        }
-
-        input[type=file] {
-            display: none;
-        }
-        input {
-            background: 0;
-            border: 0;
-            outline: none;width: 80vw;
-            max-width: 400px;
-            font-size: 1.5em;
-            transition: padding 0.3s 0.2s ease;
-        }
-
-        input:focus {
-            padding-bottom: 5px;
-        }
-
-        input:focus+.line2:after {
-            transform: scaleX(1);
-        }
-        .field2 {
-            position: relative;
-            margin-bottom: 20px;
-        }
-
-        .field2 input[type=text] {
-            background: 0;
-            border: 0;
-            outline: none;
-            width: 80vw;
-            max-width: 400px;
-            font-size: 1.5em;
-            transition: padding 0.3s 0.2s ease;
-        }
-
-        .field2 input[type=text]:focus {
-            padding-bottom: 5px;
-        }
-
-        .field2 .line2 {
-            width: 100%;
-            height: 3px;
-            position: absolute;
-            bottom: -8px;
-            background: #bdc3c7;
-        }
-
-        .field2 .line2:after {
-            content: " ";
-            position: absolute;
-            float: right;
-            width: 100%;
-            height: 3px;
-            transform: scaleX(0);
-            transition: transform 0.3s ease;
-            background: #03FA6E;
-        }
-        input {
-            background: 0;
-            border: 0;
-            outline: none;
-            width: 80vw;
-            max-width: 400px;
-            font-size: 1.5em;
-            transition: padding 0.3s 0.2s ease;
-        }
-
-        input:focus {
-            padding-bottom: 5px;
-        }
-
-        input:focus+.line3:after {
-            transform: scaleX(1);
-        }
-        
-        .field3 {
-            position: relative;
-            margin-bottom: 20px;
-        }
-
-        .field3 input[type=text] {
-            background: 0;
-            border: 0;
-            outline: none;
-            width: 80vw;
-            max-width: 400px;
-            font-size: 1.5em;
-            transition: padding 0.3s 0.2s ease;
-        }
-
-        .field3 input[type=text]:focus {
-            padding-bottom: 5px;
-        }
-
-        .field3 .line3 {
-            width: 100%;
-            height: 3px;
-            position: absolute;
-            bottom: -8px;
-            background: #949494;
-        }
-
-        .field3 .line3:after {
-            content: " ";
-            position: absolute;
-            float: right;
-            width: 100%;
-            height: 3px;
-            transform: scaleX(0);
-            transition: transform 0.3s ease;
-            background: #03FA6E;
-        }
-
-        .button1 {
-            position: relative;
-            margin: 100px;
-            padding: 10px 10px;
-            text-align: center;
-            font-size: 18px;
-            letter-spacing: 1px;
-            text-decoration: none;
-            color: #03FA6E;
-            background: transparent;
-            cursor: pointer;
-            transition: ease-out 0.5s;
-            border: 2px solid #03FA6E;
-            border-radius: 2em;
-            box-shadow: inset 0 0 0 0 #03FA6E;
-        }
-
-        .button1:hover {
-            color: black;
-            box-shadow: inset 0 -100px 0 0 #03FA6E;
-        }
-
-        .button1:active {
-            transform: scale(0.9);
-        }
-
-        .active-link {
-            color: #fff;
-       }
+    .authenticate-button:hover {
+      background-color: rgba(23, 234, 37, 0.909);
+    }
     </style>
 </head>
 <body class="bg-cover bg-center bg-no-repeat h-screen">
